--- a/WebPages/TakePota2BTheIdol/index.html
+++ b/WebPages/TakePota2BTheIdol/index.html
@@ -41,6 +41,7 @@
     <!--Yaku Han JP Font-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.4.1/dist/css/yakuhanjp.min.css">
 
+
 </head>
 
 
@@ -83,7 +84,7 @@
                 </div>
 
                 <!--Twitter-->
-                <a href="https://twitter.com/TakePota2BIdol">
+                <a href="https://twitter.com/TakePota2BIdol" target="_blank" rel="noopener noreferrer">
                     <div class="Tile6">
                         <div class="Tile6_Title">
                             <img class="Tile_Twitter_Logo" src="/Mates/Pics/Twitter_Logo_white.svg" width="100" height="100" alt="Twitter_Logo">
@@ -92,7 +93,7 @@
                 </a>
 
                 <!--YouTube-->
-                <a href="https://www.youtube.com/channel/UCQnoHqy0z1fjzWLvnVoMlTA">
+                <a href="https://www.youtube.com/channel/UCQnoHqy0z1fjzWLvnVoMlTA" target="_blank" rel="noopener noreferrer">
                     <div class="Tile7">
                         <div class="Tile7_Title">
                             <img class="Tile_YouTube_Logo" src="/Mates/Pics/YouTube-Icon-White-Logo.wine.svg" width="120" height="120" alt="YouTube_Logo">
@@ -141,12 +142,30 @@
                         <h1>夜兎理 九月</h1>
                         <h2>リーダー</h2>
                     </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/finith_season" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_218fd90a-a426-4706-8357-668a878f6b5b" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="Tile2-2">
                     <div class="Tile2-2_Name">
-                        <h1>あまねむめい</h1>
+                        <h1>あまね むめい</h1>
                         <h2>プロデューサーリーダー</h2>
+                    </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/MoomA_0750" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_e7226a5e-ec48-45e1-a499-b117e302c152" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
                     </div>
                 </div>
 
@@ -155,6 +174,15 @@
                         <h1>ぽた</h1>
                         <h2>サブリーダー</h2>
                     </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/potapal_inkling" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_7f315aa6-2f01-4055-ad8d-c77cbd9a0d80" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="Tile2-4">
@@ -162,26 +190,62 @@
                         <h1>かいざー</h1>
                         <h2>スーパーエグゼクティブニート</h2>
                     </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/KaiserVRChat" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_2dc5feac-036e-48bd-b00c-5d810f39b242" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="Tile2-5">
                     <div class="Tile2-5_Name">
                         <h1>みとてゃん</h1>
-                        <h2>0期アイドル</h2>
+                        <h2>0期メンバー</h2>
+                    </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/mitoteyanda_yo" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_021406d4-7e87-4d83-beb7-8bb9c77b5e0d" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
                     </div>
                 </div>
 
                 <div class="Tile2-6">
                     <div class="Tile2-6_Name">
                         <h1>むむがみ</h1>
-                        <h2>0期アイドル</h2>
+                        <h2>0期メンバー</h2>
+                    </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/mumu_atugami" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_bcaccd30-c9f5-49e4-961c-7c5d2015db9c" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
                     </div>
                 </div>
 
                 <div class="Tile2-7">
                     <div class="Tile2-7_Name">
                         <h1>キリエ=エレイソン</h1>
-                        <h2>0期アイドル</h2>
+                        <h2>0期メンバー</h2>
+                    </div>
+
+                    <div class="Social-Link">
+                        <a href="https://twitter.com/KyrieEleison10" target="_blank" rel="noopener noreferrer">
+                            <p>Twitter</p>
+                        </a>
+                        <a href="https://vrchat.com/home/user/usr_29c9af6e-82bd-4eaf-b1dd-b336541707e6" target="_blank" rel="noopener noreferrer">
+                            <p>VRChat</p>
+                        </a>
                     </div>
                 </div>
 
